--- a/src/componentes/Rodape/Rodape.module.css
+++ b/src/componentes/Rodape/Rodape.module.css
@@ -7,7 +7,7 @@
 
 .rodape {
     background-color: var(--fundoRodape);
-    margin: 0;
+    margin-top: 140px;
     padding-top: 20px;
     padding-bottom: 20px;
 }
