--- a/src/componentes/Video/Video.module.css
+++ b/src/componentes/Video/Video.module.css
@@ -1,22 +1,20 @@
 .container {
-    width: 430px;
-    position: relative;
-    border: 4px solid orange ;
+    width: 432px;
+    height: 320px;
+    border: 4px solid;
     border-radius: 4px 4px 15px 15px;
 }
 
 .imagem {
+    width: 432px;
+    height: 260px;
     position: relative;
-    /* max-width: 100%;
-    height: auto;
-    position: 260px; */
+    
 }
 
 .container img {
-    /* max-width: 100%; */
     width: 100%;
-    height: auto
-
+    height: 100%;
 }
 
 .divImg {
@@ -25,9 +23,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    /* border: 5px solid orange; */
-    box-shadow: inset 0 0 17px 8px orange;
-
+    box-shadow: inset 0 0 17px 8px;
 }
 
 .opcoes {
@@ -36,12 +32,10 @@
     justify-content: space-around;
     margin-top: 15.5px;
     margin-bottom: 16px;
-    
 }
 
 .item_opcao {
     display: flex;
     flex-direction: row;
     gap: 20px;
-    
 }
