--- a/src/componentes/Botao/Botao.module.css
+++ b/src/componentes/Botao/Botao.module.css
@@ -14,6 +14,7 @@
 
 .link {
     text-decoration: none;
+    background-color: transparent;
     color: var(--corFonte_primaria);
     font-family: var(--fontePrimaria);
     font-size: 1.25rem;
