--- a/src/componentes/SessaoPorCategoria/SessaoPorCategoria.module.css
+++ b/src/componentes/SessaoPorCategoria/SessaoPorCategoria.module.css
@@ -1,10 +1,9 @@
 .categoria {
     margin-left: 42px;
-    margin-left: 42px;
+    margin-right: 42px;
     display: flex;
     flex-direction: column;
     margin-bottom: 93px;
-    
 }
 
 .categoria h3 {
@@ -26,5 +25,7 @@
     flex-direction: row;
     gap: 30px;
     overflow: auto;
-
+    scrollbar-color: #999 #333;
+    
+    
 }
