--- a/src/componentes/Banner/Banner.module.css
+++ b/src/componentes/Banner/Banner.module.css
@@ -56,14 +56,14 @@ iframe {
     display: inline;
 }
 
-h2 {
+.container h2 {
     font-size: 1.5rem;
     font-weight: 400;
     margin-top: 40px;
     margin-bottom: 9px;
 }
 
-p {
+.container p {
     font-size: 1rem;
     font-weight: 300;
     margin: 0;
