--- a/src/componentes/Cabecalho/Cabecalho.module.css
+++ b/src/componentes/Cabecalho/Cabecalho.module.css
@@ -3,8 +3,10 @@
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin: 42.5px;
+    padding: 42.5px;
     gap: 10px;
+    border-bottom: 4px solid var(--corFonte_secundaria);
+
 }
 
 .menu {
