--- a/src/componentes/ListaSuspensa/ListaSuspensa.module.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.module.css
@@ -4,7 +4,7 @@
     font-size: 1.25rem;
     display: flex;
     flex-direction: column;
-    width: 49%;
+    width: 48%;
     gap: 15px;
 }
 
@@ -15,4 +15,11 @@
     border-radius: 10px;
     background-color: transparent;
     color: var(--corFonteInput);
+    font-size: 1.25rem;
+    font-weight: 600;
+    font-family: var(--fonteSecundaria);
+}
+
+.campoInput:focus {
+    border-color:  var(--corFonte_secundaria);
 }
