--- a/src/componentes/Video/Video.module.css
+++ b/src/componentes/Video/Video.module.css
@@ -29,12 +29,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 0;
+    margin-top: 15.5px;
+    margin-bottom: 16px;
 }
 
 .item_opcao {
     display: flex;
     flex-direction: row;
-    align-items: center;
     gap: 20px;
 }
