--- a/src/componentes/Video/Video.module.css
+++ b/src/componentes/Video/Video.module.css
@@ -1,6 +1,6 @@
 .container {
     width: 432px;
-    height: 322px;
+    height: 320px;
     border: 4px solid;
     border-radius: 4px 4px 15px 15px;
 }
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin: 0;
 }
 
 .item_opcao {
