--- a/src/componentes/Botao/Botao.module.css
+++ b/src/componentes/Botao/Botao.module.css
@@ -1,4 +1,5 @@
-.botao {
+.botao,
+.botaoDestacado {
     text-decoration: none;
     background-color: transparent;
     color: var(--corFonte_primaria);
@@ -16,7 +17,16 @@
     height: 54px;
 }
 
-.botaoDestaque{
+.botaoDestacado {
     color: var(--corFonte_secundaria);
     border-color: var(--corFonte_secundaria);
+    box-shadow: inset 0 0 12px 4px;
+}
+
+.botao:hover,
+.botaoDestacado:hover {
+    border: 2px solid var(--corFonte_secundaria);
+    background-color: var(--fundoEscuro);
+    color: var(--corFonte_secundaria);
+    box-shadow: inset 0 0 12px 4px;
 }
