--- a/src/componentes/ListaSuspensa/ListaSuspensa.module.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.module.css
@@ -9,8 +9,7 @@
 }
 
 .campoInput {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
     border: 3px solid var(--fundo);
     border-radius: 10px;
     background-color: transparent;
@@ -18,6 +17,13 @@
     font-size: 1.25rem;
     font-weight: 600;
     font-family: var(--fonteSecundaria);
+    outline: 0;
+}
+
+.opcoes {
+
+    background-color: var(--fundo);
+
 }
 
 .campoInput:focus {
