--- a/src/componentes/Banner/Banner.module.css
+++ b/src/componentes/Banner/Banner.module.css
@@ -4,10 +4,10 @@
     position: relative;
 }
 
-.container{
+.item{
     display: flex;
     position: relative;
-    top: 35%;
+    top: 25%;
     left: 5%;
     width: 90%;
     height: auto;
@@ -15,13 +15,13 @@
 }
 
 .previosAndNex {
-    font-size: 100px;
+    font-size: 70px;
     cursor: pointer;
     position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    top: 30%;
+    top: 35%;
     left: 0%;
     right: 0%;
     width: 100%;
@@ -34,6 +34,11 @@
 
 .icone:hover {
     background-color: rgba(128, 128, 128, 0.5);
+}
+
+.imagem {
+    width: 646px;
+    height: 333px
 }
 
 .minibanner {
@@ -58,8 +63,8 @@ iframe {
     color: var(--corFonte_secundaria);
 }
 
-.container h1 {
-    font-size: 2rem;
+.item h1 {
+    font-size: 3rem;
     font-weight: 800;
     text-align: center;
     border: transparent;
@@ -70,16 +75,72 @@ iframe {
     display: inline;
 }
 
-.container h2 {
-    font-size: 1.5rem;
+.item h2 {
+    font-size: 2rem;
     font-weight: 400;
     margin-top: 40px;
     margin-bottom: 9px;
 }
 
-.container p {
-    font-size: 1rem;
+.item p {
+    font-size: 1.5rem;
     font-weight: 300;
     margin: 0;
 }
 
+@media (max-width: 1270px) {
+    .fundo {
+        height: 650px;
+    }
+    .item h1 {
+        font-size: 2rem;
+    }
+    .item h2 {
+        font-size: 1.5rem;
+    }
+    .item p {
+        font-size: 1.2rem;
+    }
+    .imagem {
+        width: 450px;
+        height: 333px
+    }
+    .previosAndNex {
+        font-size: 65px;
+    }
+}
+
+@media (max-width: 1023px) {
+    .fundo {
+        height: 570px;
+    }
+    .item{
+        top: 20%;
+        gap: 10x;
+    }
+    .item h1 {
+        font-size: 1.3rem;
+    }
+    .item h2 {
+        font-size: 1.2rem;
+    }
+    .item p {
+        font-size: 0.8rem;
+    }
+    .minibanner {
+        width: 450px; 
+        height: 333px;
+    }
+    .previosAndNex {
+        font-size: 50px;
+    }
+}
+
+@media (max-width: 767px) {
+    .container {
+        display: none;
+    }
+}
+@media (max-width: 400px) {
+ 
+}
