--- a/src/componentes/Rodape/Rodape.module.css
+++ b/src/componentes/Rodape/Rodape.module.css
@@ -9,7 +9,7 @@
     padding-top: 42.5px;
     padding-bottom: 42.5px;
     border-top: 4px solid var(--corFonte_secundaria);
-
+    box-shadow: 0px -5px 29px 0px var(--boxShadow);
 }
 
 .texto {
