--- a/src/componentes/Botao/Botao.module.css
+++ b/src/componentes/Botao/Botao.module.css
@@ -32,3 +32,12 @@
 }
 
 
+@media (max-width: 767px) {
+    .botao,
+    .botaoDestacado {
+        font-size: 1rem;
+        width: 135px;
+        height: 45px;
+    }
+
+}
