--- a/src/componentes/SessaoPorCategoria/SessaoPorCategoria.module.css
+++ b/src/componentes/SessaoPorCategoria/SessaoPorCategoria.module.css
@@ -34,12 +34,14 @@
 @media (max-width: 1023px) {
     .categoria h3 {
         margin-left: 20%;
+        font-size: 1.5rem;
     }
 }
 
 @media (max-width: 767px) {
     .categoria h3 {
         margin-left: 0;
+        width: auto;
     }
   
 }
