--- a/src/componentes/SessaoPorCategoria/SessaoPorCategoria.module.css
+++ b/src/componentes/SessaoPorCategoria/SessaoPorCategoria.module.css
@@ -5,7 +5,6 @@
     padding-bottom: 93px;
     display: flex;
     flex-direction: column;
-
 }
 
 .categoria h3 {
@@ -26,10 +25,7 @@
     gap: 30px;
     overflow: auto;
     scrollbar-color: #999 #333;
-    
-    
 }
-
 
 @media (max-width: 1023px) {
     .categoria h3 {
@@ -43,8 +39,8 @@
         margin-left: 0;
         width: auto;
     }
-  
-}
-@media (max-width: 400px) {
- 
+    .categoria {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
