--- a/src/componentes/Cabecalho/Cabecalho.module.css
+++ b/src/componentes/Cabecalho/Cabecalho.module.css
@@ -22,9 +22,21 @@
     .cabecalho {
         padding: 15px;
         justify-content: center;
+        position: sticky;
+        bottom: 0;
+        background-color: var(--fundoFundo);
+        z-index: 999;
+        border-top: 4px solid var(--corFonte_secundaria);
+        box-shadow: 0px -5px 29px 0px var(--boxShadow);
+        border-bottom: none;
+    }
+
+    .menu {
+        flex-direction: row-reverse;
     }
 
     .logo {
         display: none;
+
     }
 }
