--- a/src/pages/PaginaBase/PaginaBase.module.css
+++ b/src/pages/PaginaBase/PaginaBase.module.css
@@ -4,8 +4,7 @@ main {
 }
 
 @media (max-width: 767px) {
-    main :nth-child(1) {order: 1;}
-    .rodape {
-        display: none;
-    }
+    .cabecalho {
+       display: none;
+    } 
 }
