--- a/src/componentes/SessaoPorCategoria/SessaoPorCategoria.module.css
+++ b/src/componentes/SessaoPorCategoria/SessaoPorCategoria.module.css
@@ -16,7 +16,8 @@
     padding: 20px;
     width: 432px;
     margin-top: 0;
-    margin-bottom: 42px;
+    margin-bottom: 0;
+
 }
 
 .videos {
@@ -25,6 +26,7 @@
     gap: 30px;
     overflow: auto;
     scrollbar-color: #999 #333;
+    padding-top: 42px;
 }
 
 @media (max-width: 1023px) {
@@ -39,6 +41,7 @@
         margin-left: 0;
         width: auto;
     }
+
     .categoria {
         padding-left: 20px;
         padding-right: 20px;
