--- a/src/componentes/Video/Video.module.css
+++ b/src/componentes/Video/Video.module.css
@@ -11,7 +11,11 @@
     position: relative;
 }
 
-.container img {
+.imagem:hover {
+    transform: scale(1.05);
+}
+
+.imagemItem {
     width: 100%;
     height: 100%;
 }
@@ -50,6 +54,9 @@
     .imagem {
         width: 373px;
         height: 260px;
+    }
+    .imagem:hover {
+        transform: scale(1);
     }
 }
 @media (max-width: 400px) {
