--- a/src/pages/Player/Player.module.css
+++ b/src/pages/Player/Player.module.css
@@ -1,4 +1,11 @@
-.container {
+.conteudo {
+    padding-left: 42px;
+    padding-right: 42px;
+    padding-top: 38px;
+    padding-bottom: 50px;
+}
+
+.containerVideo {
     margin: 0px -20px 30px -20px;
     padding: 20px;
     padding-bottom: 59%;
@@ -15,8 +22,17 @@
 
 .titulo {
     text-align: center;
-    padding-top: 25px;
+    padding-left: 32px;
+    padding-right: 32px;
     font-size: 2.5rem;
+}
+
+.descricao {
+    padding-left: 47px;
+    padding-right: 47px;
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-align: justify;
 }
 
 
@@ -24,16 +40,38 @@
     .titulo {
         font-size: 1.8rem;
     }
+
+    .descricao {
+        font-size: 1.3rem;
+    }
 }
 
 @media (max-width: 767px) {
+    .conteudo {
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 0px;
+        padding-bottom: 15px;
+    }
     .titulo {
         font-size: 1.2rem;
+    }
+
+    .descricao {
+        padding-left: 24px;
+        padding-right: 24px;
+        font-size: 0.9rem;
     }
 }
 @media (max-width: 400px) {
     .titulo {
         font-size: 1rem;
+    }
+
+    .descricao {
+        padding-left: 5px;
+        padding-right: 5px;
+        font-size: 0.7rem;
     }
 }
 
