--- a/src/componentes/Video/Video.module.css
+++ b/src/componentes/Video/Video.module.css
@@ -9,6 +9,7 @@
     width: 432px;
     height: 260px;
     position: relative;
+    cursor: pointer;
 }
 
 .imagem:hover {
@@ -40,8 +41,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 20px;
+    gap: 8px;
     cursor: pointer;
+    text-decoration: none;
+    color: var(--corFonte_primaria);
 }
 
 
