--- a/src/componentes/SessaoPorCategoria/SessaoPorCategoria.module.css
+++ b/src/componentes/SessaoPorCategoria/SessaoPorCategoria.module.css
@@ -1,8 +1,8 @@
 .categoria {
     padding-left: 42px;
     padding-right: 42px;
-    padding-top: 38px;
-    padding-bottom: 93px;
+    padding-top: 20px;
+    padding-bottom: 42px;
     display: flex;
     flex-direction: column;
 }
@@ -14,10 +14,11 @@
     border: transparent;
     border-radius: 15px;
     padding: 20px;
-    width: 432px;
+    padding-left: 0;
+    padding-right: 0;
     margin-top: 0;
     margin-bottom: 0;
-
+    width: 350px;
 }
 
 .videos {
@@ -31,19 +32,31 @@
 
 @media (max-width: 1023px) {
     .categoria h3 {
-        margin-left: 20%;
+        text-align: center;
         font-size: 1.5rem;
+        width: 315px;
     }
 }
 
 @media (max-width: 767px) {
     .categoria h3 {
-        margin-left: 0;
+        margin-left: 30%;
+        margin-right: 30%;
+        font-size: 1.2rem;
         width: auto;
     }
 
     .categoria {
         padding-left: 20px;
         padding-right: 20px;
+    }
+}
+
+@media (max-width: 400px) {
+    .categoria h3 {
+        margin-left: 20%;
+        margin-right: 20%;
+        font-size: 1rem;
+        width: auto;
     }
 }
