--- a/src/componentes/Video/Video.module.css
+++ b/src/componentes/Video/Video.module.css
@@ -1,13 +1,13 @@
 .container {
-    width: 432px;
-    height: 320px;
+    width: 345px;
+    height: 256px;
     border: 4px solid;
     border-radius: 4px 4px 15px 15px;
 }
 
 .imagem {
-    width: 432px;
-    height: 260px;
+    width: 345px;
+    height: 208px;
     position: relative;
     cursor: pointer;
 }
@@ -21,20 +21,12 @@
     height: 100%;
 }
 
-.divImg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    box-shadow: inset 0 0 17px 8px;
-}
-
 .opcoes {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin: 0;
+    padding-top: 10px;
 }
 
 .item_opcao {
@@ -47,21 +39,63 @@
     color: var(--corFonte_primaria);
 }
 
+.item_opcao:hover {
+    color: var(--corFonte_secundaria);
+}
 
-@media (max-width: 767px) {
+.item_opcao p {
+    margin: 0;
+    font-size: 1.1rem;
+}
+
+.divImg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 0 17px 8px;
+}
+
+
+@media (max-width: 1023px) {
     .container {
-        width: 373px;
-        height: 320px;
+        width: 302px;
+        height: 224px;
     }
     
     .imagem {
-        width: 373px;
-        height: 260px;
+        width: 302px;
+        height: 182px;
+    }
+    .item_opcao p {
+        margin: 0;
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 767px) {
+    .container {
+        width: 259px;
+        height: 192px;
+    }
+    
+    .imagem {
+        width: 259px;
+        height: 156px;
     }
     .imagem:hover {
         transform: scale(1);
     }
+
+    .item_opcao p {
+        margin: 0;
+        font-size: 0.9rem;
+    }
 }
 @media (max-width: 400px) {
- 
+    .item_opcao p {
+        margin: 0;
+        font-size: 0.8rem;
+    }
 }
