--- a/src/componentes/Cabecalho/Cabecalho.module.css
+++ b/src/componentes/Cabecalho/Cabecalho.module.css
@@ -27,9 +27,10 @@
 
 @media (max-width: 767px) {
     .cabecalho {
+        width: 100%;
         padding: 10px;
         justify-content: center;
-        position: sticky;
+        position: fixed;
         bottom: 0;
         background-color: var(--fundoFundo);
         z-index: 999;
@@ -37,6 +38,8 @@
         box-shadow: 0px -5px 29px 0px var(--boxShadow);
         border-bottom: none;
         order: 2;
+
+        
     }
 
     .menu{
